Tidy gateway routing helpers and fix tenant network bookkeeping
- Share JSON error writing, internal header stripping, hop parsing and gateway key checks between the routing filters and error handlers
- Record a project network's subnets as soon as the gateway joins it, so mesh calls from a new project are not rejected until the next scan
- Keep route instance lists in copy-on-write lists and snapshot them for the status endpoint
- Reserve the project name "infra", whose network the gateway deliberately ignores
- Run gateway resyncs in the background and skip overlapping requests instead of blocking startup and request threads
- Use locale-independent case conversion